@@ -598,6 +598,7 @@ aliases_domain=Domain
 aliases_dests=Alias destinations
 aliases_cmt=Description
 aliases_add=Add an alias to this domain.
+aliases_mass=Batch create aliases.
 aliases_cadd=Add an advanced alias.
 aliases_none=No mail aliases have been created in this domain yet.
 aliases_return=aliases list
@@ -3145,6 +3146,22 @@ umass_eto='$1' is not a valid forwarding address - only full email addresses can
 umass_help=This page allows you to create multiple mail / FTP users at once from a text file, in the following format (read the help for this page for more):
 umass_help2=If you just want to create a single user, <a href='$1'>click here</a> instead.
 umass_format=username:realname:password:ftp-flag:email-flag:quota:[extras]:[forwards]:[databases]
+
+amass_title=Batch Create Aliases
+amass_header=Create multiple email aliases from batch file
+amass_help=This page allows you to create multiple email aliases at once from a text file, in the following format (read the help for this page for more):
+amass_help2=If you just want to create a single alias, <a href='$1'>click here</a> instead.
+amass_format=mailbox:comment:destination:[destination...]
+amass_err=Failed to create aliases
+amass_doing=Creating aliases from $1 ..
+amass_complete=.. done ($1 created, $2 errors).
+amass_ename=Missing or invalid alias name
+amass_edests=Alias has no destination addresses
+amass_elocal=Only one local mailbox can be given
+amass_eauto=Only one autoresponder can be given
+amass_ebounce=The bounce destination cannot be combined with any other
+amass_done=Created email alias $1
+amass_eclash=An alias with the same name already exists
 
 massu_title=Un-Install Scripts
 massu_err=Failed to un-install scripts
